syntax = "proto3";

package Network;

message Packet {
  int32 id = 1;
  bytes packet = 2;
}

message UberStateBatchUpdateMessage {
  repeated UberStateUpdateMessage updates = 1;
}

message UberStateUpdateMessage {
  UberId state = 1;
  double value = 2;
}

message UberId {
  int32 group = 1;
  int32 state = 2;
}

message InitBingoMessage {
  repeated UberId uberId = 1;
}

message PrintTextMessage {
  int32 frames = 1;
  float ypos = 2;
  string text = 3;
}

message Authenticate {
  string jwt = 1;
}

message AuthenticatedMessage {
  UserInfo user = 1;
}

message UDPEncryptionKeyMessage {
  int32 udpId = 1;
  bytes key = 2;
}

message PlayerPositionMessage  {
  float x = 1;
  float y = 2;
}

message UpdatePlayerPositionMessage  {
  string playerId = 1;
  float x = 2;
  float y = 3;
}

message UserInfo {
  string id = 1;
  string name = 2;
  optional string avatarId = 3;
}

message WorldInfo {
  int64 id = 1;
  string name = 2;
  repeated UserInfo members = 3;
}

message UniverseInfo {
  int64 id = 1;
  string name = 2;
  repeated WorldInfo worlds = 3;
}

message MultiverseInfo {
  int64 id = 1;
  repeated UniverseInfo universes = 2;
  bool hasBingoBoard = 3;
  repeated UserInfo spectators = 4;
}
